# hrf-universe-home-task

./: README.md  pyproject.toml
home_task/: app.py
home_task/api/: days_to_hire.py  health.py
home_task/models/api_schema/: days_to_hire.py
home_task/models/db_schema/: __init__.py  base.py  days_to_hire.py  job_posting.py  standard_job.py  standard_job_family.py
home_task/scripts/: __init__.py  calculate_days_to_hire_stats.py
home_task/scripts/sql/: days_to_hire_stats.py
home_task/utils/: db.py  logging_config.py
migrations/: env.py
migrations/versions/: d64f08a430c5_added_days_to_hire_stats_table.py
tests/: conftest.py
tests/api/: test_days_to_hire.py  test_health.py
tests/scripts/: __init__.py  test_calculate_days_to_hire_stats.py
tests/utils/: __init__.py  test_db.py
