[tool.poetry]
name = "hrf-universe-home-task"
version = "0.1.0"
description = ""
authors = ["Dmytro Kostochko <dmytro.kostochko@hrforecast.de>"]
readme = "README.md"
packages = [{include = "home_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.68.0,<0.69.0"
psycopg2 = "^2.9.5"
sqlalchemy = ">=1.4.0,<1.5.0"
alembic = "^1.10.2"
numpy = "^2.2.5"
uvicorn = ">=0.15.0,<0.16.0"
pydantic = ">=1.8.0,<2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
pytest-cov = "^6.1.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
